Implemented base configuration for stock service

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -11,3 +11,5 @@ services:
       image: postgres:13-alpine
       environment:
          - POSTGRES_PASSWORD=password
+      ports:
+         - "5432:5432"
