--- a/src/Stock/Stock.Infrastructure/Stock.Infrastructure.csproj
+++ b/src/Stock/Stock.Infrastructure/Stock.Infrastructure.csproj
@@ -6,4 +6,18 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Providers" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Stock.Domain\Stock.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
+      <PackageReference Include="Npgsql" Version="7.0.2" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.3" />
+    </ItemGroup>
+
 </Project>
