Implemented MassTransit & Refactoring & Implemented stock features

--- a/src/Stock/Stock.Application/appsettings.json
+++ b/src/Stock/Stock.Application/appsettings.json
@@ -1,5 +1,8 @@
 {
   "ConnectionStrings": {
     "POSTGRES": "User ID=postgres;Password=password;Server=localhost;Port=5432;Database=stock;Integrated Security=true;"
-  }
+  },
+  "RABBIT_HOST": "localhost",
+  "RABBIT_LOGIN": "guest",
+  "RABBIT_PASSWORD": "guest"
 }
