--- a/src/Stock/Stock.MediatR.Contracts/Stock.MediatR.Contracts.csproj
+++ b/src/Stock/Stock.MediatR.Contracts/Stock.MediatR.Contracts.csproj
@@ -5,4 +5,12 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Commands" />
+    </ItemGroup>
+
 </Project>
