--- a/src/Stock/Stock.Core/Stock.Core.csproj
+++ b/src/Stock/Stock.Core/Stock.Core.csproj
@@ -11,12 +11,14 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Handlers" />
+      <PackageReference Include="MediatR" Version="12.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+      <ProjectReference Include="..\Stock.Infrastructure\Stock.Infrastructure.csproj" />
+      <ProjectReference Include="..\Stock.MediatR.Contracts\Stock.MediatR.Contracts.csproj" />
     </ItemGroup>
 
 </Project>
