--- a/src/Stock/Interfaces.Stock/Interfaces.Stock.csproj
+++ b/src/Stock/Interfaces.Stock/Interfaces.Stock.csproj
@@ -5,4 +5,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MassTransit.Abstractions" Version="8.0.13" />
+    </ItemGroup>
+
 </Project>
