--- a/src/Shop/Shop.Application/Shop.Application.csproj
+++ b/src/Shop/Shop.Application/Shop.Application.csproj
@@ -14,4 +14,10 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
