Added base configuration shop service

--- a/src/Shop/Shop.Core/Shop.Core.csproj
+++ b/src/Shop/Shop.Core/Shop.Core.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Handlers" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Shop.Infrastructure\Shop.Infrastructure.csproj" />
+    </ItemGroup>
+
 </Project>
