--- a/src/Shop/Shop.Application/appsettings.json
+++ b/src/Shop/Shop.Application/appsettings.json
@@ -1,2 +1,5 @@
 {
+  "ConnectionStrings": {
+    "POSTGRES": "User ID=postgres;Password=password;Server=localhost;Port=5432;Database=shop;Integrated Security=true;"
+  }
 }
