Added messages for shop saga & Implemented consumers for CQRS request & Added MediatR services

--- a/src/Shop/Shop.Application/appsettings.json
+++ b/src/Shop/Shop.Application/appsettings.json
@@ -1,5 +1,9 @@
 {
   "ConnectionStrings": {
     "POSTGRES": "User ID=postgres;Password=password;Server=localhost;Port=5432;Database=shop;Integrated Security=true;"
-  }
+  },
+  "RABBIT_HOST": "localhost",
+  "RABBIT_LOGIN": "guest",
+  "RABBIT_PASSWORD": "guest",
+  "PrefetchCount": 100
 }
