--- a/src/Shop/Shop.Core/Shop.Core.csproj
+++ b/src/Shop/Shop.Core/Shop.Core.csproj
@@ -7,11 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Handlers" />
+      <ProjectReference Include="..\Shop.Infrastructure\Shop.Infrastructure.csproj" />
+      <ProjectReference Include="..\Shop.MediatR.Contracts\Shop.MediatR.Contracts.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Shop.Infrastructure\Shop.Infrastructure.csproj" />
+      <PackageReference Include="MediatR" Version="12.0.1" />
+      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
     </ItemGroup>
 
 </Project>
