--- a/src/Stock/Stock.Application/appsettings.json
+++ b/src/Stock/Stock.Application/appsettings.json
@@ -4,5 +4,6 @@
   },
   "RABBIT_HOST": "localhost",
   "RABBIT_LOGIN": "guest",
-  "RABBIT_PASSWORD": "guest"
+  "RABBIT_PASSWORD": "guest",
+  "PrefetchCount": 100
 }
