Update order state machine

--- a/src/Shop/Shop.Application/appsettings.json
+++ b/src/Shop/Shop.Application/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "POSTGRES": "User ID=postgres;Password=password;Server=localhost;Port=5432;Database=shop;Integrated Security=true;"
+    "POSTGRES": "User ID=postgres;Password=password;Server=localhost;Port=5432;Database=shop;Integrated Security=true;",
+    "Mongo": ""
   },
   "RABBIT_HOST": "localhost",
   "RABBIT_LOGIN": "guest",
