--- a/src/Shop/Shop.Infrastructure/Shop.Infrastructure.csproj
+++ b/src/Shop/Shop.Infrastructure/Shop.Infrastructure.csproj
@@ -9,6 +9,7 @@
       <PackageReference Include="MassTransit" Version="8.0.13" />
       <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
       <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.13" />
+      <PackageReference Include="MassTransit.RedisSagas" Version="6.3.2.88" />
       <PackageReference Include="MediatR" Version="12.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.4">
