--- a/src/Web/Web.Infrastructure/Web.Infrastructure.csproj
+++ b/src/Web/Web.Infrastructure/Web.Infrastructure.csproj
@@ -6,4 +6,19 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Shop\Interfaces.Shop\Interfaces.Shop.csproj" />
+      <ProjectReference Include="..\..\Stock\Interfaces.Stock\Interfaces.Stock.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Providers" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
+      <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.13" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0-preview.2.23128.3" />
+    </ItemGroup>
+
 </Project>
