--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -13,3 +13,14 @@ services:
          - POSTGRES_PASSWORD=password
       ports:
          - "5432:5432"
+  redis:
+      image: redis:6.2-alpine
+      restart: always
+      ports:
+         - "6379:6379"
+      command: redis-server --requirepass myPassword1@
+      volumes: 
+         - redis:/data
+volumes:
+  redis:
+    driver: local
