Refactoring & Change saga storage from redis to mongo & Configure docker-compose

--- a/src/Shop/Shop.Application/appsettings.json
+++ b/src/Shop/Shop.Application/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "POSTGRES": "User ID=postgres;Password=password;Server=localhost;Port=5432;Database=shop;Integrated Security=true;",
-    "REDIS": "localhost,password=myPassword1@,ssl=false,abortConnect=false,defaultDatabase=1,syncTimeout=10000"
+    "MongoDb": "mongodb://root:myPassword1@localhost:27017"
   },
   "RABBIT_HOST": "localhost",
   "RABBIT_LOGIN": "guest",
