--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       ports:
         - "5000:5000"
       environment:
-        - RABBIT_HOST=localhost
+        - RABBIT_HOST=rabbit
         - RABBIT_LOGIN=guest
         - RABBIT_PASSWORD=guest
   shop:
@@ -38,21 +38,21 @@ services:
         context: .
         dockerfile: ./Shop/Shop.Application/Dockerfile
       environment:
-        - RABBIT_HOST=localhost
+        - RABBIT_HOST=rabbit
         - RABBIT_LOGIN=guest
         - RABBIT_PASSWORD=guest
         - PrefetchCount=100
-        - POSTGRES=User ID=postgres;Password=password;Server=localhost;Port=5432;Database=shop;Integrated Security=true;
-        - REDIS=localhost,password=myPassword1@,ssl=false,abortConnect=false,defaultDatabase=1,syncTimeout=10000
+        - ConnectionStrings__POSTGRES=User ID=postgres;Password=password;Server=postgres;Port=5432;Database=shop;Integrated Security=true;
+        - ConnectionStrings__MongoDb=mongodb://root:myPassword1@mongodb:27017
   stock:
     build:
       context: .
       dockerfile: ./Stock/Stock.Application/Dockerfile
     environment:
-      - RABBIT_HOST=localhost
+      - RABBIT_HOST=rabbit
       - RABBIT_LOGIN=guest
       - RABBIT_PASSWORD=guest
       - PrefetchCount=100
-      - POSTGRES=User ID=postgres;Password=password;Server=localhost;Port=5432;Database=stock;Integrated Security=true;
+      - ConnectionStrings__POSTGRES=User ID=postgres;Password=password;Server=postgres;Port=5432;Database=stock;Integrated Security=true;
 volumes:
  mongodb-data:
