Refactoring & Fixed routing slip dependencies

--- a/src/Shop/Shop.Application/appsettings.json
+++ b/src/Shop/Shop.Application/appsettings.json
@@ -3,6 +3,23 @@
     "POSTGRES": "User ID=postgres;Password=password;Server=localhost;Port=5432;Database=shop;Integrated Security=true;",
     "MongoDb": "mongodb://root:myPassword1@localhost:27017"
   },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "restrictedToMinimumLevel": "Debug"
+        }
+      }
+    ],
+    "Enrich": ["FromLogContext"]
+  },
   "RABBIT_HOST": "localhost",
   "RABBIT_LOGIN": "guest",
   "RABBIT_PASSWORD": "guest",
