Implemented serilog logging & Updated configuration & Implemented cancel and reservation logic & Refactoring

--- a/src/Stock/Stock.Application/appsettings.json
+++ b/src/Stock/Stock.Application/appsettings.json
@@ -2,6 +2,23 @@
   "ConnectionStrings": {
     "POSTGRES": "User ID=postgres;Password=password;Server=localhost;Port=5432;Database=stock;Integrated Security=true;"
   },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "restrictedToMinimumLevel": "Debug"
+        }
+      }
+    ],
+    "Enrich": ["FromLogContext"]
+  },
   "RABBIT_HOST": "localhost",
   "RABBIT_LOGIN": "guest",
   "RABBIT_PASSWORD": "guest",
