--- a/src/Web/Web.API/appsettings.json
+++ b/src/Web/Web.API/appsettings.json
@@ -5,6 +5,23 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "restrictedToMinimumLevel": "Debug"
+        }
+      }
+    ],
+    "Enrich": ["FromLogContext"]
+  },
   "AllowedHosts": "*",
   
   "RABBIT_HOST": "localhost",
