--- a/src/Shop/Shop.Application/appsettings.json
+++ b/src/Shop/Shop.Application/appsettings.json
@@ -5,7 +5,7 @@
   },
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Debug",
+      "Default": "Information",
       "Override": {
         "Microsoft.AspNetCore": "Warning"
       }
